# nixie

./: AGENTS.md  README.md  pyproject.toml
nixie/: __init__.py  cli.py
nixie/unittests/: test_get_mmdc_cmd.py  test_parse_blocks.py
tests/: conftest.py
tests/integration/: conftest.py  test_cli_behavior.py
